2-kopi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopi-svc-2
spec:
  selector:
    app: kopi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
