kopi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kopi-svc
spec:
  selector:
    app: kopi
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
