kopi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kopi-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: app.nglp.tech
      http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: kopi-svc
                port:
                  number: 80
